<resources>
    <string name="app_name">Guardian News</string>

    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_empty">No Books Found</string>
    <string name="error_server">Internal Server Error</string>
    <string name="error_response">Bad Server Response</string>
    <string name="action_settings">Setting</string>
    <string name="menu_search">Search</string>

    <!-- SETTING -->
    <string name="setting_category_1">General</string>
    <string name="setting_general_order_by_label">Order By</string>
    <string name="setting_general_order_by_key">general_order_by</string>
    <string name="setting_general_order_by_default_value">@string/setting_general_order_by_newest_value</string>

    <string name="setting_general_order_by_newest_label">Newest</string>
    <string name="setting_general_order_by_newest_value">newest</string>

    <string name="setting_general_order_by_oldest_label">Oldest</string>
    <string name="setting_general_order_by_oldest_value">oldest</string>

    <string name="setting_category_2">Search</string>
    <string name="setting_search_order_by_label">Order By</string>
    <string name="setting_search_order_by_key">search_order_by</string>
    <string name="setting_search_order_by_default_value">@string/setting_search_order_by_relevance_value</string>

    <string name="setting_search_order_by_newest_label">Newest</string>
    <string name="setting_search_order_by_newest_value">newest</string>

    <string name="setting_search_order_by_oldest_label">Oldest</string>
    <string name="setting_search_order_by_oldest_value">oldest</string>

    <string name="setting_search_order_by_relevance_label">Relevance</string>
    <string name="setting_search_order_by_relevance_value">relevance</string>
    <string name="settings_title">Settings</string>
</resources>
