<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arifian.udacity.guardiannews.MainActivity">

    <TextView
        android:id="@+id/text_error_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/default_space"
        android:background="@color/colorAccent"
        android:text="@string/error_no_internet"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_error_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/default_space"
        android:text="@string/error_empty"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_error_server"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/default_space"
        android:text="@string/error_server"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_error_response"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/default_space"
        android:text="@string/error_response"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_book"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/default_space"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/default_space"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:focusable="true"/>

</LinearLayout>
